k8s/fluentd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fluentd
  template:
    metadata:
      labels:
        component: fluentd
    spec:
      containers:
        - name: fluentd
          image: micrommath/fluentd
