k8s/movements-async-receiver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movements-async-receiver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: movements-async-receiver
  template:
    metadata:
      labels:
        component: movements-async-receiver
    spec:
      containers:
        - name: movements-async-receiver
          image: micrommath/transaction-movements-async-receiver
