k8s/transactions-seed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-seed-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: transactions-seed
  template:
    metadata:
      labels:
        component: transactions-seed
    spec:
      containers:
        - name: transactions-seed
          image: micrommath/transactions-seed
